<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>eu.exeris</groupId>
    <artifactId>exeris-kernel-root</artifactId>
    <version>0.11.0-SNAPSHOT</version>
    <packaging>pom</packaging>

    <name>Exeris Kernel :: Root</name>
    <description>Cloud-Native, Zero-Copy Runtime Platform (Java 26+, FFM, Open-Core)</description>
    <inceptionYear>2026</inceptionYear>

    <modules>
        <module>exeris-kernel-build-config</module>
        <module>exeris-kernel-bom</module>
        <module>exeris-kernel-parent</module>

        <module>exeris-kernel-spi</module>
        <module>exeris-kernel-tck</module>
        <module>exeris-kernel-core</module>
        <module>exeris-kernel-community-testkit</module>
        <module>exeris-kernel-community</module>
        <module>exeris-kernel-community-kafka</module>
        <module>exeris-kernel-diagnostics-cli</module>
    </modules>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
        <maven.compiler.source>25</maven.compiler.source>
        <maven.compiler.target>25</maven.compiler.target>
        <maven.compiler.release>25</maven.compiler.release>

        <!--
            ADR-066: the DISTRIBUTED artifact is preview-clean, so main sources compile without
            this flag. Test and TCK fixtures still use StructuredTaskScope (26 files) and are not
            distributed, so it is applied to the test-compile execution only, and to the surefire
            JVM below because preview-stamped test classes will not load without it.
        -->
        <jdk.preview.enable>--enable-preview</jdk.preview.enable>
        <coverage.argLine/>

        <!--
            v0.8 Sprint 6 (Coverage C-P0-01): default JaCoCo LINE coverage floor
            applied to every module that produces a jacoco.exec. Per-module
            overrides live in each module's <properties>. Default (0.20) is a
            floor that any module with source must meet; modules without their
            own tests (tck, community-testkit) skip the check naturally because
            no jacoco.exec is produced.
        -->
        <jacoco.line.minimum>0.20</jacoco.line.minimum>

        <!--
            v0.9 Sprint 4c Phase 3 (coverage mechanics): BRANCH coverage floor,
            previously unguarded (the v0.8 audit's blind spot — line could hold
            while branch silently rotted). Same ratchet model as LINE: per-module
            overrides sit ~5-9 pp below the measured 2026-06-10 baseline so the
            existing suite passes while a regression trips the gate. Branch ratios
            run lower than line, hence a lower default. Modules with no jacoco.exec
            (tck, community-testkit) skip the check; the thin diagnostics-cli is
            deliberately ungated (0.0) like its LINE floor.
        -->
        <jacoco.branch.minimum>0.15</jacoco.branch.minimum>
        <jvm.args>
            -XX:+UnlockExperimentalVMOptions
            -XX:+UseZGC
            -XX:-ZUncommit
            --enable-preview
            --enable-native-access=ALL-UNNAMED
            -XX:FlightRecorderOptions=stackdepth=256
            -XX:StartFlightRecording=disk=true,filename=target/surefire.jfr,maxsize=256m,maxage=10m,settings=profile
            -Xlog:jfr+startup=off
        </jvm.args>
        <maven.build.timestamp.format>yyyyMMdd-HHmmss</maven.build.timestamp.format>
    </properties>

    <build>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <version>3.14.1</version>
                    <configuration>
                        <release>${maven.compiler.release}</release>
                    </configuration>
                    <executions>
                        <execution>
                            <id>default-testCompile</id>
                            <configuration>
                                <compilerArgs>
                                    <arg>${jdk.preview.enable}</arg>
                                </compilerArgs>
                            </configuration>
                        </execution>
                    </executions>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-surefire-plugin</artifactId>
                    <version>3.2.5</version>
                    <configuration>
                        <argLine>@{coverage.argLine} ${jvm.args}</argLine>
                        <systemPropertyVariables>
                            <!--
                              A test that hangs is worse than a test that fails: it holds the build
                              open with no message, and CI reports a timeout on the job rather than a
                              name. This repository tests concurrency primitives, so several suites
                              wait on a latch whose only other exit is an interrupt from the very
                              teardown they are checking — StructuredScopeTest's neverReleased is the
                              clearest case, and the regression named in its own @DisplayName would
                              hang it rather than fail it. Nothing bounded them: no @Timeout on those
                              methods, no forkedProcessTimeoutInSeconds here or in any parent.
                              Ten minutes is far above any test in the reactor and far below "never".
                            -->
                            <junit.jupiter.execution.timeout.default>10 m</junit.jupiter.execution.timeout.default>
                        </systemPropertyVariables>
                    </configuration>
                </plugin>
            </plugins>
        </pluginManagement>
    </build>

    <profiles>
        <profile>
            <id>coverage</id>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.jacoco</groupId>
                        <artifactId>jacoco-maven-plugin</artifactId>
                        <version>0.8.14</version>
                        <executions>
                            <execution>
                                <id>prepare-jacoco-agent</id>
                                <goals>
                                    <goal>prepare-agent</goal>
                                </goals>
                                <configuration>
                                    <propertyName>coverage.argLine</propertyName>
                                </configuration>
                            </execution>
                            <execution>
                                <id>jacoco-report</id>
                                <phase>verify</phase>
                                <goals>
                                    <goal>report</goal>
                                </goals>
                                <configuration>
                                    <formats>
                                        <format>XML</format>
                                        <format>HTML</format>
                                    </formats>
                                </configuration>
                            </execution>
                            <!--
                                v0.8 Sprint 6 (Coverage C-P0-01 absorption): enforce LINE
                                coverage floor per module. Each module-with-source sets its
                                own ${jacoco.line.minimum} in <properties> (ratchet pattern —
                                threshold slightly below current coverage so regressions are
                                caught while existing baseline passes). Modules without their
                                own tests (tck, community-testkit, parent, bom) produce no
                                jacoco.exec — the check goal then no-ops silently. The check
                                runs only when -Pcoverage is active (default CI main job).
                            -->
                            <execution>
                                <id>jacoco-check</id>
                                <phase>verify</phase>
                                <goals>
                                    <goal>check</goal>
                                </goals>
                                <configuration>
                                    <rules>
                                        <rule>
                                            <element>BUNDLE</element>
                                            <limits>
                                                <limit>
                                                    <counter>LINE</counter>
                                                    <value>COVEREDRATIO</value>
                                                    <minimum>${jacoco.line.minimum}</minimum>
                                                </limit>
                                                <limit>
                                                    <counter>BRANCH</counter>
                                                    <value>COVEREDRATIO</value>
                                                    <minimum>${jacoco.branch.minimum}</minimum>
                                                </limit>
                                            </limits>
                                        </rule>
                                    </rules>
                                    <haltOnFailure>true</haltOnFailure>
                                </configuration>
                            </execution>
                        </executions>
                    </plugin>
                </plugins>
            </build>
        </profile>
    </profiles>

    <distributionManagement>
        <repository>
            <id>github-exeris-kernel</id>
            <name>Exeris Kernel — GitHub Packages</name>
            <url>https://maven.pkg.github.com/exeris-systems/exeris-kernel</url>
        </repository>
        <snapshotRepository>
            <id>github-exeris-kernel</id>
            <name>Exeris Kernel — GitHub Packages (Snapshots)</name>
            <url>https://maven.pkg.github.com/exeris-systems/exeris-kernel</url>
        </snapshotRepository>
    </distributionManagement>
</project>
